--- a/sff_sudoku_solver/CMakeLists.txt
+++ b/sff_sudoku_solver/CMakeLists.txt
@@ -4,6 +4,6 @@
 cmake_minimum_required (VERSION 3.8)
 
 # Add source to this project's executable.
-add_executable (lc_sudoku_solver "lc_sudoku_solver.cpp" "lc_sudoku_solver.h")
+add_executable (sff_sudoku_solver "sff_sudoku_solver.cpp" "sff_sudoku_solver.h")
 
 # TODO: Add tests and install targets if needed.
