add variations of original algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,6 @@ project ("sff_sudoku_solver")
 
 # Include sub-projects.
 add_subdirectory ("sff_sudoku_solver")
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/hard_sudokus.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
